@@ -189,6 +189,12 @@ def find_segment_starts(data):
 
     return start_pos, labels
 
+def ceildiv(dividend, divisor):
+    "integer ceiling division"
+
+    # int(bool) means 0 -> 0, 1+ -> 1
+    return (dividend // divisor) + int(bool(dividend % divisor))
+
 def main(args=sys.argv[1:]):
     pass
 
